Sema: Check reference to implicitly-generated super.init() call from inlinable context

Fixes <https://bugs.swift.org/browse/SR-10940>.